stage2/week4/deploy-helm/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wayshub-backend
  namespace: fadil
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wayshub-backend
  template:
    metadata:
      labels:
        app: wayshub-backend
    spec:
      containers:
      - name: wayshub-backend
        image: fadil05me/wayshub-backend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: wayshub-backend
  namespace: fadil
spec:
  selector:
    app: wayshub-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
